# mealmate

./: .dockerignore  .gitignore  README.md  docker-compose.yml
services/auth/: .env.example  pyproject.toml
services/auth/config/: redis.env.example
services/auth/src/: main.py
services/auth/src/alembic/: env.py
services/auth/src/alembic/versions/: 001_create_users_table.py
services/auth/src/app/: config.py  dependencies.py  main.py
services/auth/src/app/api/: auth.py
services/auth/src/app/api/v1/: auth.py  router.py
services/auth/src/app/models/: domain.py  schemas.py  user.py
services/auth/src/app/repositories/: token_repository.py  user_repository.py
services/auth/src/app/services/: auth_service.py
services/auth/tests/: test_auth.py
services/notification/: .env.example  pyproject.toml
services/notification/src/: main.py
services/notification/src/app/: config.py
services/notification/src/app/consumer/: kafka_consumer.py
services/notification/src/app/domain/: models.py
services/notification/src/app/repository/: notification_repository.py
services/notification/src/app/service/: notification_service.py
services/notification/tests/: test_kafka_consumer.py  test_models.py  test_notification_repository.py  test_notification_service.py
services/order/: .env.example  pyproject.toml
services/order/src/: main.py
services/order/src/app/: config.py  dependencies.py  main.py
services/order/src/app/api/: orders.py
services/order/src/app/db/: models.py
services/order/src/app/models/: domain.py  schemas.py
services/order/src/app/repositories/: order_repository.py
services/order/src/app/services/: order_service.py  routing_client.py
services/order/tests/: test_orders.py
services/restaurant/: .env.example  pyproject.toml
services/restaurant/config/: database.env.example
services/restaurant/src/: main.py
services/restaurant/src/app/: config.py  exceptions.py  main.py
services/restaurant/src/app/db/: mongo.py
services/restaurant/src/app/dependencies/: auth.py
services/restaurant/src/app/models/: domain.py  menu_item.py  restaurant.py
services/restaurant/src/app/repositories/: menu_repo.py  restaurant_repo.py
services/restaurant/src/app/services/: menu_service.py  restaurant_service.py
services/restaurant/tests/: test_health.py  test_menu_items.py  test_restaurants.py
services/routing/: .env.example  pyproject.toml
services/routing/src/: main.py
services/routing/src/app/: main.py
services/routing/src/app/api/: routes.py
services/routing/src/app/core/: database.py
services/routing/src/app/domain/: models.py
services/routing/src/app/repositories/: neo4j_repo.py
services/routing/src/app/services/: matching.py
services/routing/src/app/utils/: haversine.py
services/routing/tests/: test_matching.py  test_routing.py
(+27 files in other folders)
