[project]
name = "order-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic-settings==2.2.1",
    "sqlalchemy==2.0.30",
    "asyncpg==0.29.0",
    "redis==5.0.4",
    "confluent-kafka==2.4.0",
    "httpx==0.27.0",
]

[project.optional-dependencies]
test = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "httpx==0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
